# git-fastcdc

./: .gitattributes  README.md  git_fastcdc.py  pyproject.toml
